# PythonCourse

./: .gitlab-ci.yml  FAQ.md  README.md  requirements.txt  setup.cfg
01.1.PythonTools/hello_world/: hello_world.py
HW.1/filter_list_by_list/: filter_list_by_list.py
HW.1/fizz_buzz/: fizz_buzz.py  test_public.py
HW.1/iterate_me/: iterate_me.py
HW.1/merge_lists/: README.md  merge_lists.py
HW.1/middle_value_of_triple/: middle_value_of_triple.py
HW.1/reverse_list/: reverse_list.py
HW.1/two_sum/: README.md  test_public.py
HW.2/bin_min/: README.md  bin_min.py  test_public.py
HW.2/bin_peak/: README.md  bin_peak.py  test_public.py
HW.2/caesar_cipher/: caesar_cipher.py
HW.2/comprehensions/: comprehensions.py  test_public.py
HW.2/merge_lists_2/: merge_lists.py  merge_lists_2.py  test_public.py
HW.2/min_to_drop/: min_to_drop.py
HW.2/reverse_dict/: README.md  reverse_dict.py  test_public.py
HW.2/traverse_dictionary/: traverse_dictionary.py
HW.2[hard]/banner_search_system/: banner_search_system.py  test_public.py
HW.2[hard]/object_by_id/: object_by_id.py  test_public.py
HW.2[hard]/rt_join/: README.md  rt_join.py  test_public.py
HW.3/count_util/: README.md  count_util.py  test_public.py
HW.3/git_log/: git_log.py
HW.3/input_/: input_.py
HW.3/is_power_of_two/: README.md  is_power_of_two.py  test_public.py
HW.3/length_of_last_word/: README.md  (+2 more)
tools/testlib/: setup.cfg
tools/testlib/testlib/: docs.py  functions.py  modules.py
tools/testlib/tests/: test_functions.py
vm/: README.md  cases.py  conftest.py  test_public.py  vm.py  vm_runner.py
(+76 files in other folders)
