[metadata]
name = testlib
version = 0.0.2
description = Micro lib useful for checking students solutions
classifiers =
    Topic :: Education :: Testing
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
;package_dir =
;    =testlib
